
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_RDWR ;
 int PINE ;
 int PTRACE_CONT ;
 int PTRACE_TRACEME ;
 int close (int) ;
 int die (int,char*) ;
 int dup2 (int,int ) ;
 int execv (int ,char**) ;
 int fork () ;
 int getty (int*,int*) ;
 int line ;
 int open (int ,int ) ;
 int ptrace (int ,int,int ,...) ;
 int wait (int *) ;

int start_debug(int cont) {
        int pid = fork();
 int slave,master;


 if( getty(&master,&slave) == -1)
  die(0,"getty()");

        if(pid == -1)
                die(1,"fork()");


        if(!pid) {
                char *arg[] = { "pine", "-p","/tmp/pinerc","-I",
                 "l,>,>,<,<,q,y",((void*)0) };

                if(ptrace(PTRACE_TRACEME,((void*)0),((void*)0))==-1)
                        die(1,"ptrace()");

  if ((pid = open(line, O_RDWR)) == -1)
   die(1,"open()");


  dup2(pid,0);
   close(1);
   close(2);
                execv(PINE,arg);
                die(1,"execve()");
        }
        else {
  wait(((void*)0));
  if(cont) {
                 if(ptrace(PTRACE_CONT,pid,0,0) == -1)
                         die(1,"ptrace()");
   wait(((void*)0));
  }
 }
 return pid;
}
